# Quadrotor-Navigation-using-Receding-Horizon-planning

./: README.md
geometric_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
geometric_controller/launch/: convert_bag_to_images.launch  five_firefly.launch  mav_for_integration.launch  mav_launch.launch  mav_launch_polytraj.launch  mav_launch_trajectory_camera_fov.launch  mav_launch_with_octomap.launch  multiple_firefly.launch  multiple_mav.launch  single_mav.launch  single_mav_shortrange_forexperiment.launch  two_mav.launch
geometric_controller/msg/: Desired_Trajectory.msg  Desired_Trajectory.msg~  PolynomialCoefficients.msg  PolynomialTrajectory.msg  control_inputs.msg  control_inputs.msg~  controller_inputs.msg~  modifiedodometry.msg  target_positions.msg  target_positions_5quad.msg  velocities_from_navigation_function.msg
geometric_controller/src/: MultiDOFTrajectory_in_camera_fov.py  MultiDOFTrajectory_in_camera_fov_stoppingpolicy.py  R1_polynomial_trajectory_generation.py  compare_estimates_with_fast_propagate.py  construct_cloud_for_trajectory.py  controller_test2.py~  current_pose.py~  fast_propagate.py  geometric_controller_R3.py  geometric_controller_for_fov_trajectory_generation_R1.py  motor_speeds.py  motor_speeds.py~  parameters.py  parameters.py~  path_in_camera_workspace_rosnode.py  pointcloud_transformation_check.py  polynomial_trajectory_generation_from_waypoints.py  polynomial_trajectory_generation_newlogic.py  position_controller.py~  px4_offboard_control.py  px4_offboard_control_RHP.py  px4_offboard_control_RHP_MutltiDOFTrajectoryMsg.py  px4_offboard_control_polytraj.py  subscribing_check.py  test.py~  trajectory.py~  trajectory_R1.py  trajectory_for_integration.py  trajectory_from_waypoints.py  trajectory_in_camera_fov.py  vicon_stateestimator_comparison.py  vicon_vio_modfiedodom_comparison.py  vio_to_cog.py
geometric_controller/src/ss/: 3DNF_MRSpaper_ros.py  3DNF_MRSpaper_ros_R1.py  3DNF_MRSpaper_ros_R2.py  3DNF_MRSpaper_ros_R2test.py  3DNF_SW_nObstacle_R1_ROSnode.py  3DNavigationFunctionTrajectory_SquircleWorld_Hallway.py  3DNavigationFunctionTrajectory_SquircleWorld_R1.py  ChangeOdometryMsgFromVicon.py  (+62 more)
ov_msckf_launch/: pgeneva_udrone1_ros.launch
realsense2_camera/launch/: rs_camera.launch  rs_d435_and_t265.launch  rs_rgbd.launch  rs_t265.launch  rs_t265_withpointcloud.launch
realsense2_camera/src/: base_realsense_node.cpp
realsense_pointcloud_analysis/: CMakeLists.txt  package.xml  sample_cam_calibration.yaml
realsense_pointcloud_analysis/launch/: pointgrey_compressedImage_publisher.launch
realsense_pointcloud_analysis/msg/: CMakeLists.txt  box_coordinates.msg  publish_bounding_boxes.msg
realsense_pointcloud_analysis/src/: filter_realsense_cloud.cpp  fulldetect_ros_R0.py  generate_occupancy_grid.py  get_octree_data.cpp  kinect_pc_stiched.cpp  kinect_pc_stiched_R1.cpp  kinect_pc_transform.cpp  kinect_pc_transform_R1.cpp  modify_pointcloud.py  pointcloud_from_pointgrey_cameras.cpp  pointcloud_from_visensor.py  pointgrey_compressed_image.py  publish_camera_info.py  read_octree.py  tag_detection.py
rotors_gazebo/launch/: five_firefly.launch  mav_hovering_example_with_vi_sensor.launch  multiple_firefly.launch  single_firefly.launch  spawn_mav.launch  spawn_mav_multiquad.launch  three_multicopters_hovering_example_R1.launch  two_firefly.launch
rotors_gazebo/worlds/: basic.world  basic_R1.world  basic_R2.world  basic_maze.world  basic_oak_tree.world  forest.world  multi_object.world  multi_object2.world  mutli_cylinder_world.world  mutli_cylinder_world2.world  mutli_cylinder_world3.world  mutli_cylinder_world4.world  mutli_cylinder_world5.world  oak_tree_world.world  world_for_experiment.world  world_for_experiment2.world
(+52 files in other folders)
